--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,12 +1,22 @@
 RewriteEngine on
 # If a directory or a file exists, use it directly
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
+# Nếu có dòng này thì redirect non www to www sẽ ko hoạt động
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
 
 # redirect www to non-wwww
 #RewriteBase /
 #RewriteCond %{HTTP_HOST} ^www\.(.*)$ [NC]
 #RewriteRule ^(.*)$ http://%1/$1 [R=301,L]
+#end
+
+# khi có www và non www thì session khác nhau, 
+# nên nếu đang login ở non-www thì khi vào www sẽ là chưa đăng nhập
+# Hiện tại google và fb đều redirect sang www hết
+# redirect www to non-wwww
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteCond %{HTTPS}s on(s)|offs()
+RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [NE,L,R]
 #end
 
 # Otherwise forward it to index.php
