--- a/web/.htaccess
+++ b/web/.htaccess
@@ -1,8 +1,8 @@
 RewriteEngine on
 # If a directory or a file exists, use it directly
 # Nếu có dòng này thì redirect non www to www sẽ ko hoạt động
-#RewriteCond %{REQUEST_FILENAME} !-f
-#RewriteCond %{REQUEST_FILENAME} !-d
+RewriteCond %{REQUEST_FILENAME} !-f
+RewriteCond %{REQUEST_FILENAME} !-d
 
 # redirect www to non-wwww
 #RewriteBase /
@@ -14,9 +14,8 @@ RewriteEngine on
 # nên nếu đang login ở non-www thì khi vào www sẽ là chưa đăng nhập
 # Hiện tại google và fb đều redirect sang www hết
 # redirect www to non-wwww
-RewriteCond %{HTTP_HOST} !^www\.
-RewriteCond %{HTTPS}s on(s)|offs()
-RewriteRule ^ http%1://www.%{HTTP_HOST}%{REQUEST_URI} [NE,L,R]
+#RewriteCond %{HTTP_HOST} ^example.com$ [NC]
+#RewriteRule (.*) http://www.example.com/$1 [R=301,L] 
 #end
 
 # Otherwise forward it to index.php
