--- a/web/.htaccess
+++ b/web/.htaccess
@@ -3,6 +3,8 @@ RewriteEngine on
 # Nếu có dòng này thì redirect non www to www sẽ ko hoạt động
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteRule ^(.*)$ index.php?/$1 [QSA]
+RewriteRule . index.php 
 
 # redirect www to non-wwww
 #RewriteBase /
@@ -14,9 +16,9 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # nên nếu đang login ở non-www thì khi vào www sẽ là chưa đăng nhập
 # Hiện tại google và fb đều redirect sang www hết
 # redirect www to non-wwww
-#RewriteCond %{HTTP_HOST} ^example.com$ [NC]
-#RewriteRule (.*) http://www.example.com/$1 [R=301,L] 
+RewriteCond %{HTTP_HOST} ^chartcost.com$ [NC]
+RewriteRule (.*) https://www.chartcost.com/$1 [R=301,L] 
 #end
 
 # Otherwise forward it to index.php
-RewriteRule . index.php 
+#RewriteRule . index.php 
